--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
 	</head>
 	<body>
 		<h1>Testing CSS</h1>
-		<p>
-			Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae, veritatis corrupti quo molestiae exercitationem porro ducimus quae maxime enim aut fugit delectus fuga esse tempore
-			unde consequatur. Natus, dignissimos sapiente.
-		</p>
+		<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae, veritatis corrup</p>
 	</body>
 </html>
