Inline Styling vs internal Styling

--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
 	</head>
 	<body>
 		<h1>Testing CSS</h1>
-		<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae, veritatis corrup</p>
+
+		<!-- Inline Styling -->
+		<p style="background-color: rgb(170, 153, 186)">This should have a bluish color as the background</p>
+
+		<!-- internal Styling -->
+		<style>
+			li {
+				background-color: burlywood;
+			}
+		</style>
+		<ul>
+			<li>This should</li>
+			<li>have a burlywood backgound</li>
+		</ul>
 	</body>
 </html>
